# bsql

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: bsql.c  bsql.h  main.c
test/: db1 - Copy.bsqldb  db1.bsqldb
